--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,11 @@ body {
 	position: relative;
 }
 
+#about img {
+	width: 100%;
+	height: 100%;
+}
+
 .picture.left::before {
 	content: ' ';
 	background-color: #E5975F;
