--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,13 @@ body {
 	padding-block: 100px;
 }
 
+#contact img {
+
+	width: 100%;
+	height: 100%;
+}
+
+
 #contact .container {
 	display: flex;
 }
