--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,11 @@ body {
 	align-items: center;
 }
 
+.top-header img {
+	width: 20px;
+	height: 20px;
+}
+
 .top-header .name {
 	font-size: 26px;
 }
@@ -54,7 +59,7 @@ body {
 
 #about img {
 	width: 100%;
-	height: 100%;
+	height: 350px;
 }
 
 .picture.left::before {
@@ -107,7 +112,7 @@ body {
 
 #gallery img {
 	width: 100%;
-	height: 100%;
+	height: 450px;
 }
 
 
@@ -227,6 +232,12 @@ body {
 	padding-inline: 100px;
 	padding-block: 100px;
 }
+
+#contact img {
+	width: 100%;
+	height: 350px;
+}
+
 
 
 #contact .container {
@@ -367,6 +378,12 @@ input[type="submit"] {
 	}
 }
 
+
+.carousel-item img {
+	height: 450px;
+
+}
+
 @media all and (max-width: 650px) {
 	.top-header {
 		flex-direction: column;
@@ -411,4 +428,16 @@ input[type="submit"] {
 	.picture {
 		width: 80%;
 	}
+
+
+	.carousel-item img {
+		height: 250px;
+
+	}
+
+	#gallery img {
+		width: 100%;
+		height: 350px;
+	}
+
 }
