--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,15 +419,13 @@ input[type="submit"] {
 
 	.carousel-item img {
 		width: 100%;
-		margin: auto;
-		padding: 10px;
+		height: 200px;
 
 	}
 
 	#gallery img {
 		width: 100%;
-		margin: auto;
-		padding: 10px;
+		height: 200px;
 
 	}
 
