--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ body {
 
 .social-link img {
 	width: 20px;
+	height: 20px;
 }
 
 #about {
@@ -57,10 +58,6 @@ body {
 	position: relative;
 }
 
-#about img {
-	width: 100%;
-	height: 350px;
-}
 
 .picture.left::before {
 	content: ' ';
@@ -104,10 +101,6 @@ body {
 #about-me p {
 	width: 80%;
 	font-size: 14px;
-}
-
-#gallery {
-	/*	min-height: 100vh; */
 }
 
 
@@ -371,6 +364,37 @@ input[type="submit"] {
 }
 
 
+.carousel-item img {
+	width: 100%;
+	height: 450px;
+
+
+}
+
+#gallery img {
+	width: 100%;
+	height: 400px;
+	object-fit: cover;
+
+
+}
+
+#contact img {
+	width: 100%;
+	height: 300px;
+
+
+}
+
+#about img {
+	width: 100%;
+	height: 300px;
+
+
+
+}
+
+
 @media all and (max-width: 650px) {
 	.top-header {
 		flex-direction: column;
@@ -417,5 +441,35 @@ input[type="submit"] {
 	}
 
 
+	.carousel-item img {
+		width: 100%;
+		height: 200px;
 
+
+
+	}
+
+	#gallery img {
+		width: 100%;
+		height: 380px;
+		object-fit: cover;
+
+
+	}
+
+	#contact img {
+		width: 100%;
+		height: 200px;
+
+
+
+	}
+
+	#about img {
+		width: 100%;
+		height: 200px;
+
+
+
+	}
 }
