--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,6 +367,7 @@ input[type="submit"] {
 .carousel-item img {
 	width: 100%;
 	height: 450px;
+	object-fit: cover;
 
 
 }
@@ -444,14 +445,15 @@ input[type="submit"] {
 	.carousel-item img {
 		width: 100%;
 		height: 200px;
-
+		object-fit: cover;
 
 
 	}
 
 	#gallery img {
 		width: 100%;
-		height: 380px;
+		height: 350px;
+		object-fit: cover;
 
 
 
