--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,6 +374,7 @@ input[type="submit"] {
 
 #gallery img {
 	width: 100%;
+	height: 400px;
 	object-fit: cover;
 
 
@@ -451,6 +452,7 @@ input[type="submit"] {
 
 	#gallery img {
 		width: 100%;
+		height: 350px;
 		object-fit: cover;
 
 
