--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,8 @@ body {
 
 .top-header .logo {
 	font-size: 26px;
+	width: 200px;
+
 }
 
 .nav ul {
@@ -89,6 +91,8 @@ body {
 	margin-top: 1em;
 	margin-bottom: 60px;
 	font-size: 30px;
+	width: 200px;
+
 }
 
 .about-me__introduction {
@@ -96,6 +100,7 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+
 }
 
 #about-me p {
@@ -383,7 +388,6 @@ input[type="submit"] {
 #contact img {
 	width: 100%;
 	height: 300px;
-
 
 }
 
