--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,8 +124,9 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #4c4503;
 	border-radius: 0;
+
 }
 
 .nav-pills .nav-link {
