--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,6 +415,56 @@ input[type="submit"] {
 
 }
 
+footer {
+	width: 100%;
+	background-color: white;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	padding: 20px;
+	gap: 10px;
+
+}
+
+
+#contact-adresse {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	gap: 5px;
+
+}
+
+#contact-adresse svg {
+	width: 20px;
+	height: 20px;
+	margin-top: -10px;
+
+}
+
+#contact-adresse a {
+	text-decoration: none;
+
+}
+
+#nous-suivre {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	align-items: center;
+	gap: 10px;
+
+}
+
+#nous-suivre img {
+	width: 32px;
+	height: 32px;
+
+}
+
+
 
 @media all and (max-width: 650px) {
 	.top-header {
